--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
     "npm": "^8.4.1",
     "react": "^17.0.2",
